bk_ida/gccida/c3/start_function
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6683:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6702:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6943:12: error: expected expression
*( _OWORD *)&v26->parm_flag = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6943:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v26->parm_flag = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6944:12: error: expected expression
*( _OWORD *)&v26->this_block = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6944:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v26->this_block = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6945:12: error: expected expression
*( _OWORD *)&v26->shadowed = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6945:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v26->shadowed = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6946:12: error: expected expression
*( _OWORD *)&v26->names = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/c-decl.c:6946:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v26->names = 0LL; 
   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/start_function/src/obj/c-decl.o] Error 1
